create http frontend to display data and expose data from readDb

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "akamai log parser to json",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "parse": "node parse.js",
     "createDb": "node createDb.js",
     "readDb": "node readDb.js"
